Add Image Geometry handling, Improv panic handling of window thread and Handle move of Position, Vector, Size and Transformations to base crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ edition = "2018"
 license = "MIT"
 
 [dependencies]
+gymnarium_base = { path = "../gymnarium_base" }
 gymnarium_visualisers_base = { path = "../gymnarium_visualisers_base" }
 piston_window = "0.112.0"
 gfx_device_gl = "0.16.2"
+image = "0.23.10"
